version code 030. The function copying from assets to sdcard works. ListView works.